Extensions: Ensure ExtensionWebContentsObserver:InitializeRenderFrame is not called from constructor.

ExtensionWebContentsObserver:InitializeRenderFrame is also called from its
constructor. But InitializeRenderFrame is a virtual function, hence for this
invocation from the constructor, the derived class version
(ChromeExtensionWebContentsObserver:InitializeRenderFrame) won't be called.
Correct this by having a public Initialize() method on
ExtensionWebContentsObserver and introducing a static CreateForWebContents on
derived classes to initialize the instance.

BUG=811384

Change-Id: I38d2daa81202520121c78dd473c5eea1ea599ad5
Reviewed-on: https://chromium-review.googlesource.com/940863
Reviewed-by: Sergey Volk <servolk@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541069}
Former-commit-id: 399b6c3d211c09e1e0a003e8edb547043535bf77