chrome/browser/extensions/chrome_extension_web_contents_observer.h
@@ -29,6 +29,10 @@ class ChromeExtensionWebContentsObserver
  public:
   ~ChromeExtensionWebContentsObserver() override;
 
+  // Creates and initializes an instance of this class for the given
+  // |web_contents|, if it doesn't already exist.
+  static void CreateForWebContents(content::WebContents* web_contents);
+
  private:
   friend class content::WebContentsUserData<ChromeExtensionWebContentsObserver>;
 
