chromecast/browser/extensions/cast_extension_web_contents_observer.h
@@ -18,6 +18,10 @@ class CastExtensionWebContentsObserver
  public:
   ~CastExtensionWebContentsObserver() override;
 
+  // Creates and initializes an instance of this class for the given
+  // |web_contents|, if it doesn't already exist.
+  static void CreateForWebContents(content::WebContents* web_contents);
+
  private:
   friend class content::WebContentsUserData<CastExtensionWebContentsObserver>;
 
